--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon-cloud": "^4.1.4",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "simple-icons": "^8.3.0",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
