--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^4.1.4",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-social-icons": "^5.15.0",
     "simple-icons": "^8.3.0",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
