--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^8.5.0",
+    "panolens": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.90",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-three-fiber": "^6.0.13",
     "react-tilt": "^0.1.4",
+    "react-youtube": "^10.1.0",
     "simple-icons": "^8.3.0",
     "tailwindcss": "^3.2.4",
+    "three": "^0.148.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
