--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.90",
     "react-router-dom": "^6.7.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
