--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.7.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.3.2",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "react-three-fiber": "^6.0.13",
